# bflib

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  README.md  TODO.md  travis.sh
config/: default.cmake  version.cmake
doc/: Doxyfile
include/bflib/: contracts.h  tree.h  tree.hpp  utils.h
include/bflib/container/: graph.h  non_empty_vector.h
include/bflib/strings/: utils.h
lib/: CMakeLists.txt  fft.cpp  filter.cpp
lib/include/bflib/: contracts.h  utils.h
lib/include/bflib/2d/: bounding_box_2d.h  line_2d.h
lib/include/bflib/algorithms/: algorithms.h
lib/include/bflib/container/: b_tree.h.h  non_empty_vector.h  tree.h  tree.hpp
lib/include/bflib/math/: interval.h
lib/include/bflib/ml/: estimator.h  naive_bayes.h
lib/include/bflib/signal_processing/: fft.h  filter.h
lib/include/bflib/statistics/: normal_distribution.h
lib/include/bflib/strings/: string.h  utils.h
lib/include/bflib/testing/: ddmin.h
lib/src/signal_processing/: fft.cpp  filter.cpp
lib/src/strings/: utils.cpp
src/strings/: string.cpp  utils.cpp
test/: CMakeLists.txt  fft_test.cpp  filter_test.cpp  tree_test.cpp
test/2d/: bounding_box_2d_test.cpp  line_2d_test.cpp
test/algorithm/: algorithms_test.cpp
test/container/: graph_test.cpp  tree_test.cpp
test/math/: interval_test.cpp
test/ml/: estimator_test.cpp
test/signal_processing/: fft_test.cpp  filter_test.cpp
test/statistics/: normal_distribution_test.cpp
test/strings/: utils_test.cpp
test/testing/: ddmin_test.cpp
